# Tools

.github/workflows/: snapmatch-release.yml
ZipExtractor/: Zip-extractor.bat  readme.md  zip-extractor.py
snapmatch/: README.md  pyproject.toml
snapmatch/.github/workflows/: snapmatch-release.yml
snapmatch/src/snapmatch/: __init__.py  __main__.py  cli.py  hashing.py  io_utils.py  matching.py
